--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,7 @@ DerivedData/
 ### Xcode Patch ###
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+### Snapshot ###
+FailureDiffs/
+
 # End of https://www.gitignore.io/api/osx,xcode,cocoapods
